--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
   
     <div class="content">
         <section id="home">
-          <div class="img">
-            <img src="image.png">
-          </div>
           <div class="name">
             <h4>  Hi,This is</h4>
             <h1> SAI</h1>
@@ -56,7 +53,7 @@
         <br>
         <br>
 
-        <img src="file:///C:/Users/User/Pictures/IMG-20231030-WA0022.jpg">
+        <img src="file:///C:/Users/sai/Downloads/1000008688%20(1)-modified.png">
             <h2>About Me</h2>
             <p> 
               "As a highly creative and innovative Full Stack Developer, I possess a unique approach to crafting 
@@ -79,10 +76,6 @@
               <h2> ANDROID DEVELOPMENT</h2> <br>
             <p>AS a web developer I can develop a neat and clean webpages,websites and more for low prices.</p>
             </div>
-              <div class="box-3">
-                <h2> GAME DEVOLOPMENT</h2> <br>
-            <p>AS a web developer I can develop a neat and clean webpages,websites and more for low prices.</p>
-              </div>
                </div>
        </section>
 
@@ -95,18 +88,14 @@
         <div class="wrapper-2">
           <div class="skill-1">
         <h2> WEB DEVOLOPMENT</h2>   <br>
-         <li>html</li>
-         <li>css</li>
-         <li>javascript</li>
+         <li>Html</li>
+         <li>Css</li>
+         <li>Javascript</li>
         </div>
          <div class="skill-2">
            <h2> ANDROID DEVELOPMENT</h2> <br>
-           <li>java</li>
+           <li>Java</li>
          </div>
-           <div class="skill-3">
-             <h2> GAME DEVOLOPMENT</h2> <br>
-            <li>C++</li>
-           </div>
             </div>
      </section>
         
@@ -129,9 +118,9 @@
            <br>
            <br>
            <br>
-           <a href="https://www.facebook.com/?checkpoint_src=any"> <img src="file:///C:/Users/User/Pictures/IMG-20231030-WA0020.jpg"></a>
-          <a href="https://www.instagram.com/webDroid_"> <img src="file:///C:/Users/User/Pictures/IMG-20231030-WA0024.jpg"></a>
-          <a href="https://www.linkedin.com/in/sai-gandharapu-b5464b266/"> <img src="file:///C:/Users/User/Pictures/IMG-20231030-WA0026.jpg"></a>
+           <a href="https://www.facebook.com/?checkpoint_src=any"> <img src="file:///C:/Users/sai/Downloads/facebook-color-icon-2048x2048-bfly1vxr.png"></a>
+          <a href="https://www.instagram.com/webDroid_"> <img src="file:///C:/Users/sai/Downloads/Instagram_icon.png.webp"></a>
+          <a href="https://www.linkedin.com/in/sai-gandharapu-b5464b266/"> <img src="file:///C:/Users/sai/Downloads/linked%20in.png"></a>
           </div>
         </section>
     </div>
