--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <br>
         <br>
 
-        <img src="file:///C:/Users/sai/Downloads/1000008688%20(1)-modified.png">
+        <img src="1000008688 (1)-modified.png">
             <h2>About Me</h2>
             <p> 
               "As a highly creative and innovative Full Stack Developer, I possess a unique approach to crafting 
@@ -118,9 +118,9 @@
            <br>
            <br>
            <br>
-           <a href="https://www.facebook.com/?checkpoint_src=any"> <img src="file:///C:/Users/sai/Downloads/facebook-color-icon-2048x2048-bfly1vxr.png"></a>
-          <a href="https://www.instagram.com/webDroid_"> <img src="file:///C:/Users/sai/Downloads/Instagram_icon.png.webp"></a>
-          <a href="https://www.linkedin.com/in/sai-gandharapu-b5464b266/"> <img src="file:///C:/Users/sai/Downloads/linked%20in.png"></a>
+           <a href="https://www.facebook.com/?checkpoint_src=any"> <img src="facebook-color-icon-2048x2048-bfly1vxr.png"></a>
+          <a href="https://www.instagram.com/webDroid_"> <img src="Instagram_icon.png.webp"></a>
+          <a href="https://www.linkedin.com/in/sai-gandharapu-b5464b266/"> <img src="linked in.png"></a>
           </div>
         </section>
     </div>
