--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <br>
         <br>
 
-        <img src="1000008688 (1)-modified.png">
+        <img src="sailogo.png">
             <h2>About Me</h2>
             <p> 
               "As a highly creative and innovative Full Stack Developer, I possess a unique approach to crafting 
